demos/retrogames/monkeyisland-istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: monkeyisland-gateway
  namespace: games
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: monkeyisland
  namespace: games
spec:
  hosts:
  - "*"
  gateways:
  - monkeyisland-gateway
  http:
  - route:
    - destination:
        host: monkeyisland
        port: 
          number: 8080
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: monkeyisland
  namespace: games
spec:
  host: monkeyisland
